# LICENSE

./: Cargo.toml  README.md
src/: afl.rs  agpl.rs  apache.rs  artistic.rs  bsd.rs  bsl.rs  cc.rs  ecl.rs  epl.rs  eupl.rs  gpl.rs  isc.rs  lgpl.rs  lib.rs  lppl.rs  main.rs  mit.rs  mpl.rs  ms_pl.rs  ncsa.rs  ofl.rs  osl.rs  psql.rs  unlicense.rs  wtfpl.rs  zlib.rs
