[[bin]]
name = "licer"
path = "src/bin/licer.rs"

[package]
name = "license-rs"
version = "0.1.0"
authors = ["clearloop <udtrokia@gmail.com>"]
edition = "2018"
description = "The license generator"
repository = "https://github.com/clearloop/license"
license = "MIT"
documentation = "https://docs.rs/license"
homepage = "https://github.com/clearloop/license"
keywords = ["development-tools"]
readme = './README.md'
